// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reusable content transfomer > should replace a reusable content block if the block is provided 1`] = `
{
  "attributes": [],
  "children": [],
  "name": "Test",
  "position": {
    "end": {
      "column": 9,
      "line": 4,
      "offset": 17,
    },
    "start": {
      "column": 1,
      "line": 4,
      "offset": 9,
    },
  },
  "type": "mdxJsxFlowElement",
}
`;

exports[`reusable content transfomer > should replace a reusable content block with multiple words if the block is provided 1`] = `
{
  "attributes": [],
  "children": [],
  "name": "MyCustomComponent",
  "position": {
    "end": {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "mdxJsxFlowElement",
}
`;
